[package]
name = "defi_kit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.1"
dotenv = "0.15.0"
env_logger = "0.9.0"
ethereum-tx-sign = "4.0.0"
hex = "0.4.3"
log = "0.4.17"
reqwest = { version = "0.11.11", features = ["json"]}
serde = { version = "1.0.137", features = ["derive"]}
tokio = { version = "1.19.2", features = ["full"]}
url = "2.2.2"
web3 = "0.18.0"
